--- a/css/main.css
+++ b/css/main.css
@@ -407,7 +407,10 @@ header .responsive-nav ul {
 
 .margin-top {
     margin-top: 20px;
+    display: block;
 }
+
+
 
 /***************************PULLS*************************/
 
