--- a/css/main.css
+++ b/css/main.css
@@ -444,8 +444,42 @@ header .responsive-nav ul {
 
 /***************************RIGHT*************************/
 
+.pishkhan {
+    width: 100%;
+    background-color: white;
+    padding: 8px;
+}
+
+.pishkhan a i {
+    padding-right: 5px;
+    padding-top: 15px;
+    font-size: .6em;
+    color: black;
+}
+
+.fake-icons {
+    margin: 0 auto;
+}
+
+.pishkhan a {
+    display: inline-block;
+}
+
+.pishkhan img {
+    width: 100%;
+    overflow: hidden;
+}
+
+/***************************YADDASHT*************************/
+
+.between {
+    background-color: white;
+    margin: 40px 0 15px;
+    padding: 6px;
+}
+
 .column-right {
-    background-color: lightgreen;
+    margin-top: 10px;
 }
 
 @media screen and (min-width:750px) {
@@ -460,6 +494,52 @@ header .responsive-nav ul {
         width: 30%;
         float: right;
     }
+}
+
+.yaddasht {
+    background-color: white;
+}
+
+.yaddasht img {
+    border-radius: 50%;
+}
+
+.yaddasht ul li {
+    padding: 8px;
+}
+
+.yaddasht time {
+    color: #666;
+    font-size: .7em;
+    padding: 5px;
+    display: block;
+}
+
+.yaddasht .image-date {
+    width: 40%;
+    float: right;
+}
+
+.yaddasht .title-name {
+    width: 60%;
+    float: left;
+}
+
+.yaddasht .title-name h4 {
+    margin: 0;
+}
+
+.yaddasht .title-name a {
+    font-size: .8em;
+    line-height: 25px;
+    padding: 3px;
+    color: #666;
+    display: block;
+}
+
+.yaddasht .title-name a i {
+    font-size: 1em;
+   
 }
 
 /*************************** MID *************************/
@@ -479,9 +559,7 @@ header .responsive-nav ul {
 
 /*************************** FIRST - BOX *************************/
 
-.first-box-image a {
-    display: inline-block;
-}
+.first-box-image a {}
 
 @media screen and (min-width:750px) {
     .first-box-image {
@@ -526,7 +604,7 @@ header .responsive-nav ul {
 
 @media screen and (min-width:950px) {
     .first-box h1 {
-        font-size: .9em;
+        font-size: 1em;
     }
 }
 
@@ -611,7 +689,7 @@ header .responsive-nav ul {
 .header-news a {
     color: white;
     font-size: .8em;
-    padding: 10px;
+    padding: 8px 12px;
     display: block;
 }
 
